# agent-llm-wiki

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  install-hook.sh  pyproject.toml
docs/: dashboard.md
examples/: large-dl-survey.md
raw/: Harness engineering leveraging Codex in an agent-first world.md  Scaling Managed Agents Decoupling the brain from the hands.md  Unlocking the Codex harness how we built the App Server.md
reports/: instruction-2026-05-04-query.md  instruction-2026-05-08-Scaling Managed Agents Decoupling the brain from the hands.md  instruction-2026-05-08-query.md  instruction-2026-05-15-query.md  lint-report.md  plan-2026-05-15-large-dl-survey.json  queries.md  schema-note.md  token-usage.md
templates/: index.md
tests/: conftest.py
wiki/: agent-first-world.md  agents-dot-md.md  alexnet.md  batch-normalization.md  bert.md  codex-app-server.md  codex-cli.md  codex-core.md  context-anxiety.md  conversation-primitives.md  convolutional-neural-network.md  data-augmentation.md  dropout.md  efficientnet.md  gpt-series.md  gradient-descent.md  harness-engineering.md  index.md  json-rpc-protocol.md  label-smoothing.md  large-language-model.md  learning-rate-schedule.md  lenet.md  log.md  managed-agents.md  neural-architecture-search.md  pets-vs-cattle.md  ralph-wiggum-loop.md  recurrent-neural-network.md  regularization.md  relu.md  resnet.md  rotary-position-embedding.md  sandbox-isolation.md  session-log.md  thread-lifecycle.md  transfer-learning.md  transformer-architecture.md  vggnet.md  vision-transformer.md
(+104 files in other folders)
