[project]
name = "wiki-cli"
version = "0.1.2"
description = "LLM-powered personal wiki CLI"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "anthropic>=0.40",
    "httpx[socks]",
]

[project.scripts]
wiki = "wiki_cli.cli:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
